# 3d_scan_viewer_repo

./: CMakeLists.txt  README.md
src/: main.c  opengl-functions.c  opengl-functions.h  ov7670.c  ov7670.h  renderer-3d.c  renderer-3d.h  renderer-image.c  renderer-image.h  triangulation-math.c  triangulation-math.h  uart.c  uart.h  window.c  window.h
